message_macro/message_macro/tests/ui/unnamed_fields.rs
use message_macro::BeBytes;

#[derive(BeBytes)]
enum UnsupportedEnum {
    A,
    B,
}

fn main() {}
